<resources>
    <string name="app_name">HealthPort</string>
    <string name="take_picture">Take a picture</string>
    <string name="name">Name:</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="registration">Registration</string>
    <string name="register">REGISTER</string>
    <string name="documents">Documents</string>
    <string name="contacts">Contacts</string>
    <string name="profiles">Profiles</string>
    <string name="settings">Settings</string>
    <string name="new_email">New email:</string>
    <string name="good">Good?</string>
    <string name="cancel">CANCEL</string>
    <string name="old_email">Old Email:</string>
    <string name="todo">TODO</string>
    <string name="put_your_email_address">put your email address:</string>
    <string name="reset">Reset</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="choose_photo">Choose photo</string>
    <string name="backText">BACK</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="upload_from_picture">Take a picture</string>
    <string name="uploads_from_photos">Pick from phone photos</string>
    <string name="uploads_from_pdf">Pick a pdf on your phone</string>
    <string name="profilename">profileName</string>
    <string name="filename">fileName:</string>
    <string name="add">ADD</string>
    <string name="searchContact">Search Contact</string>
    <string name="new_contact">New Contact</string>
    <string name="save">SAVE</string>
    <string name="searchDocument">Search Document</string>
    <string name="upload">Add a Document</string>
    <string name="add_page">Add more pages?</string>
    <string name="inbox">Inbox</string>
    <string name="finish">Done</string>

</resources>
