<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_uploads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cfeng.healthport.uploads">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="28sp"
        android:text="@string/upload" />

    <TextView
        android:id="@+id/backText"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backArrow"
        android:layout_toEndOf="@+id/backArrow"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/backText"
        android:textStyle="bold"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/backArrow"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/back_arrow" />

    <TextView
        android:id="@+id/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/upload_from_picture" />

    <ImageView
        android:id="@+id/camera"
        app:srcCompat="@drawable/camera"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capture"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/camera"
        android:layout_marginTop="35dp"
        android:layout_marginStart="0dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/uploads_from_photos" />

    <ImageView
        android:id="@+id/image"
        app:srcCompat="@drawable/image"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image"
        android:layout_marginTop="35dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/uploads_from_pdf" />

    <ImageView
        android:id="@+id/pdfIcon"
        app:srcCompat="@drawable/pdf"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pdf"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
