<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".password_update">

    <TextView
        android:id="@+id/cancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cancelX"
        android:layout_toEndOf="@+id/cancelX"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textStyle="bold"
        android:focusable="true" />

    <ImageView
        android:id="@+id/cancelX"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        app:srcCompat="@drawable/cancel_x"
        android:contentDescription="@string/todo"
        android:focusable="true" />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="28sp"
        android:text="Change Password" />


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/old_pass_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settingsTitle"
        android:layout_marginTop="65dp">

        <TextView
            android:id="@+id/old_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/old_pass"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/new_pass_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/old_pass_line"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/new_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/email_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/new_pass_line"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="65dp">

        <ImageView
            android:id="@+id/good_icon"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/green_check"
            android:contentDescription="@string/todo"
            android:focusable="true"/>

        <TextView
            android:id="@+id/good"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/good"
            android:textStyle="bold"
            android:textSize="20sp"
            android:focusable="true"/>
    </LinearLayout>


</RelativeLayout>