<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_change_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cfeng.healthport.change_settings">



    <TextView
        android:id="@+id/cancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cancelX"
        android:layout_toEndOf="@+id/cancelX"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:focusable="true" />

    <ImageView
        android:id="@+id/cancelX"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/cancel_x"
        android:contentDescription="@string/todo"
        android:focusable="true" />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="28sp"
        android:text="Change Email" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="65dp">

        <ImageView
            android:id="@+id/good_icon"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/green_check"
            android:contentDescription="@string/todo"
            android:focusable="true"/>

        <TextView
            android:id="@+id/good"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/good"
            android:textStyle="bold"
            android:textSize="20sp"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/old_email_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settingsTitle"
        android:layout_marginTop="65dp">

        <TextView
            android:id="@+id/old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/old_email" />

        <EditText
            android:id="@+id/old_email"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/new_email_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/old_email_line"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/email_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/new_email"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/password_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/new_email_line"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>






</RelativeLayout>