<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cfeng.healthport.contacts_home">

    <TextView
        android:id="@+id/backText"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backArrow"
        android:layout_toEndOf="@+id/backArrow"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/backText"
        android:textStyle="bold"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/backArrow"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/plus_button" />

    <TextView
        android:id="@+id/addText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/add"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_toLeftOf="@+id/addButton"
        android:layout_alignTop="@+id/addButton"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="28sp"
        android:text="@string/contacts" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/title"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="35dp"
        app:srcCompat="@drawable/search_icon" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/searchIcon"
        android:layout_marginLeft="15dp"
        android:layout_alignBottom="@+id/searchIcon"
        android:layout_marginBottom="-10dp"
        android:hint="@string/searchContact"
        android:textSize="16dp"
        android:textColorHint="@android:color/darker_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/contactList"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchIcon"
        android:layout_marginTop="30dp"/>

</RelativeLayout>


