<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cfeng.healthport.settings">

    <TextView
        android:id="@+id/backText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backArrow"
        android:layout_toEndOf="@+id/backArrow"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/backText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:focusable="true" />

    <ImageView
        android:id="@+id/backArrow"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/todo"
        android:focusable="true" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="28sp"
        android:text="Your Document Links" />

    <ListView
        android:id="@+id/link_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_above="@+id/done_line"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

    </ListView>

    <LinearLayout
        android:id="@+id/done_line"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/checkMark"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/green_check" />

        <TextView
            android:id="@+id/doneText"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/saveButton"
            android:layout_marginTop="4dp"
            android:layout_marginStart="15dp"
            android:text="@string/finish"
            android:textStyle="bold"
            android:textSize="20sp" />


    </LinearLayout>





</RelativeLayout>