<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_change_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.cfeng.healthport.change_contact">


    <TextView
        android:id="@+id/cancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cancelX"
        android:layout_toEndOf="@+id/cancelX"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:focusable="true" />

    <ImageView
        android:id="@+id/cancelX"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        app:srcCompat="@drawable/cancel_x"
        android:contentDescription="@string/todo"
        android:focusable="true" />

    <TextView
        android:id="@+id/editDocTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:textSize="28sp"
        android:text="Edit Document" />





    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/name_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editDocTitle"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/docName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignStart="@+id/NumberLabel"
            android:text="Name:"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/docName_type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/NameLabel"
            android:layout_marginLeft="20dp"
            android:layout_alignBaseline="@+id/NameLabel"
            android:ems="10"
            android:inputType="none|textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="85dp">

        <ImageView
            android:id="@+id/save_icon"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/green_check" />
        <TextView
            android:id="@+id/saveText"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:text="@string/save"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>

